@@ -3367,13 +3367,13 @@ int $(DEV_NAME)::NIintegrate(int qcap) // used by DEVload (not DC)
 
 	return 0; // OK
 }
-// -------------------------------------------------------------------------- //
+/* -------------------------------------------------------------------------- 
 int CKTdltNNum(void*,int)
 {
 	untested();
     return 0; // OK
   }
-// -------------------------------------------------------------------------- //	
+// -------------------------------------------------------------------------- */	
 #define _STATIC
 #define _DYNAMIC
 void $(DEV_NAME)::temperature()
